force-app/main/default/objects/GiftEntry/GiftEntry.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>