force-app/main/default/objects/GiftEntry/fields/Anno_di_Competenza__c.field-meta.xml
<CustomField>
    <fullName>Anno_di_Competenza__c</fullName>
    <formula>TEXT(YEAR( Data_di_Competenza__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anno di Competenza</label>
    <type>Text</type>
</CustomField>