force-app/main/default/objects/GiftEntry/fields/Data_di_Competenza__c.field-meta.xml
<CustomField>
    <fullName>Data_di_Competenza__c</fullName>
    <label>Data di Competenza</label>
    <type>Date</type>
</CustomField>