force-app/main/default/objects/GiftEntry/fields/Nome_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Nome_Donatore__c</fullName>
    <formula>Donor.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Donatore</label>
    <type>Text</type>
</CustomField>