force-app/main/default/objects/GiftEntry/fields/Original_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Amount__c</fullName>
    <label>Original Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>