force-app/main/default/objects/GiftEntry/fields/Overview_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Overview_Donatore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overview Donatore</label>
    <referenceTo>Donor_Overview__c</referenceTo>
    <relationshipLabel>Donazioni</relationshipLabel>
    <relationshipName>Donazioni</relationshipName>
    <type>Lookup</type>
</CustomField>