force-app/main/default/objects/GiftEntry/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overview Donatore per Anno</label>
    <referenceTo>Reporting_Year__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>