force-app/main/default/objects/GiftEntry/fields/Tipo_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Donatore__c</fullName>
    <label>Tipo Donatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>grande_donatore</fullName>
                <label>Grande Donatore</label>
            </value>
            <value>
                <fullName>piccolo_donatore</fullName>
                <label>Piccolo Donatore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>