force-app/main/default/objects/GiftEntry/fields/Withholding_percent__c.field-meta.xml
<CustomField>
    <fullName>Withholding_percent__c</fullName>
    <label>Withholding %</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>