force-app/main/default/objects/GiftEntry/fields/Year_of_the_Donation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_the_Donation__c</fullName>
    <label>Year of the Donation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>