force-app/main/default/objects/GiftEntry/listViews/All_GiftEntries.listView-meta.xml
<ListView>
    <fullName>All_GiftEntries</fullName>
    <columns>Name</columns>
    <columns>Data_di_Competenza__c</columns>
    <columns>Title__c</columns>
    <columns>GiftTransaction</columns>
    <columns>Donor</columns>
    <columns>PaymentMethod</columns>
    <columns>GiftAmount</columns>
    <columns>Original_Donation_Amount__c</columns>
    <columns>Withholding_percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Donations</label>
</ListView>