force-app/main/default/objects/GiftEntry/listViews/Donazioni_2022.listView-meta.xml
<ListView>
    <fullName>Donazioni_2022</fullName>
    <columns>Name</columns>
    <columns>GiftBatch</columns>
    <columns>GiftTransaction</columns>
    <columns>GiftCommitment</columns>
    <columns>Donor</columns>
    <columns>Campaign</columns>
    <columns>PaymentMethod</columns>
    <columns>GiftAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Anno_di_Competenza__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>Donazioni 2022</label>
</ListView>