force-app/main/default/objects/GiftEntry/listViews/donazioni_ricevute.listView-meta.xml
<ListView>
    <fullName>donazioni_ricevute</fullName>
    <columns>Name</columns>
    <columns>Data_di_Competenza__c</columns>
    <columns>Title__c</columns>
    <columns>GiftTransaction</columns>
    <columns>Donor</columns>
    <columns>PaymentMethod</columns>
    <columns>GiftAmount</columns>
    <columns>Original_Donation_Amount__c</columns>
    <columns>Withholding_percent__c</columns>
    <columns>Campaign</columns>
    <columns>Anno_di_Competenza__c</columns>
    <columns>Reporting_Year__c</columns>
    <columns>Overview_Donatore__c</columns>
    <filterScope>Everything</filterScope>
    <label>Donazioni Ricevute</label>
</ListView>